--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
         -webkit-background-size:cover;
         -moz-background-size:cover;
         -ms-background-size:cover;
-        min-height:800px;
         -o-background-size:cover;
         position: relative;
     }
@@ -44,8 +43,6 @@
         background: rgba(0, 0, 0, 0.90);
         text-align: center;
         color: white;
-        padding-top: 100px;
-        padding-bottom: 100px;
         border-radius: 1em;
     }
 
@@ -74,8 +71,8 @@
   <body>
 
     <div class="container-fluid">
-        <div class="row header">
-            <div class="col-sm my-auto header-greetings mx-4">
+        <div class="row header vh-100">
+            <div class="col-md-6 py-5 my-auto header-greetings mx-4">
                 <h1 class="display-3" style="color: #1ed760;">Dr Sa&uacute;l Vargas</h1>
                 <h2 class>Machine Learning Engineer at Spotify</h2>
                 <div class="social-media-top">
@@ -88,7 +85,6 @@
                     </ul>
                 </div>              
             </div>
-            <div class="col-sm"></div>
         </div>
 
         <div class="row py-5">
