--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
     p {
         font-weight: bold;
+        text-align: center;
     }
     
     html,body{
@@ -76,11 +77,11 @@
                 <h2 class>Machine Learning Engineer at Spotify</h2>
                 <div class="social-media-top">
                     <ul class="social">
-                        <li><a href="mailto:hello@saulvargas.es"><img src="images/mail.png" alt="E-mail" class="img-circle icon"></a></li>
-                        <li><a href="http://www.twitter.com/saulvargas"><img src="images/twitter.png" alt="Twitter" class="img-circle icon"></a></li>
-                        <li><a href="http://es.linkedin.com/in/saulvargas"><img src="images/linkedin.png" alt="LinkedIn" class="img-circle icon"></a></li>
-                        <li><a href="http://scholar.google.es/citations?user=tCqjVGgAAAAJ"><img src="images/google-scholar.png" alt="Mendeley" class="img-circle icon"></a></li>
-                        <li><a href="https://github.com/saulvargas"><img src="images/github.png" alt="GitHub" class="img-circle icon"></a></li>
+                        <li><a href="mailto:hello@saulvargas.es"><img src="images/mail.png" alt="E-mail" class="img-circle"></a></li>
+                        <li><a href="http://www.twitter.com/saulvargas"><img src="images/twitter.png" alt="Twitter" class="img-circle"></a></li>
+                        <li><a href="http://es.linkedin.com/in/saulvargas"><img src="images/linkedin.png" alt="LinkedIn" class="img-circle"></a></li>
+                        <li><a href="http://scholar.google.es/citations?user=tCqjVGgAAAAJ"><img src="images/google-scholar.png" alt="Google Scholar" class="img-circle"></a></li>
+                        <li><a href="https://github.com/saulvargas"><img src="images/github.png" alt="GitHub" class="img-circle"></a></li>
                     </ul>
                 </div>              
             </div>
