--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@
             margin: 0 5px 0 0;
             height: 60px;
         }
+
+        html {
+            scroll-behavior: smooth;
+        }
     </style>
 </head>
 
@@ -81,27 +85,39 @@
 
     <div class="container-fluid">
         <div class="row header vh-100">
-            <div class="col-md-6 py-5 my-auto header-greetings mx-4">
-                <h1 class="display-3" style="color: #1ed760;">Dr Sa&uacute;l Vargas</h1>
-                <h2 class>Machine Learning Engineer at Spotify</h2>
-                <div class="social-media-top">
-                    <ul class="social">
-                        <li><a href="mailto:hello@saulvargas.es"><img src="images/mail.png" alt="E-mail"
-                                    class="img-circle"></a></li>
-                        <li><a href="http://www.twitter.com/saulvargas"><img src="images/twitter.png" alt="Twitter"
-                                    class="img-circle"></a></li>
-                        <li><a href="http://es.linkedin.com/in/saulvargas"><img src="images/linkedin.png" alt="LinkedIn"
-                                    class="img-circle"></a></li>
-                        <li><a href="http://scholar.google.es/citations?user=tCqjVGgAAAAJ"><img
-                                    src="images/google-scholar.png" alt="Google Scholar" class="img-circle"></a></li>
-                        <li><a href="https://github.com/saulvargas"><img src="images/github.png" alt="GitHub"
-                                    class="img-circle"></a></li>
-                    </ul>
+            <div class="col">
+                <div class="row" style="height: 90%;">
+                    <div class="col-md-6 py-5 my-auto header-greetings mx-4">
+                        <h1 class="display-3" style="color: #1ed760;">Dr Sa&uacute;l Vargas</h1>
+                        <h2 class>Machine Learning Engineer at Spotify</h2>
+                        <div class="social-media-top">
+                            <ul class="social">
+                                <li><a href="mailto:hello@saulvargas.es"><img src="images/mail.png" alt="E-mail"
+                                            class="img-circle"></a></li>
+                                <li><a href="http://www.twitter.com/saulvargas"><img src="images/twitter.png"
+                                            alt="Twitter" class="img-circle"></a></li>
+                                <li><a href="http://es.linkedin.com/in/saulvargas"><img src="images/linkedin.png"
+                                            alt="LinkedIn" class="img-circle"></a></li>
+                                <li><a href="http://scholar.google.es/citations?user=tCqjVGgAAAAJ"><img
+                                            src="images/google-scholar.png" alt="Google Scholar" class="img-circle"></a>
+                                </li>
+                                <li><a href="https://github.com/saulvargas"><img src="images/github.png" alt="GitHub"
+                                            class="img-circle"></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="row" style="height: 10%;">
+                    <a id="scroll-down" type="button" class="btn mx-auto" href="#introduction">
+                        <svg height="48" viewBox="0 0 10 16" width="80" aria-hidden="true">
+                            <path fill-rule="evenodd" d="M5 11L0 6l1.5-1.5L5 8.25 8.5 4.5 10 6l-5 5z"></path>
+                        </svg>
+                    </a>
                 </div>
             </div>
         </div>
 
-        <div class="row py-5">
+        <div id="introduction" class="row py-5">
             <div class="col-sm-3 offset-sm-1 mt-5 mb-3">
                 <img class="img-fluid" style="border-radius: 1em;" src="images/profile.jpg" alt="A picture of me">
             </div>
