fix chrome issues

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     </div>
                 </div>
                 <div class="row" style="height: 10%;">
-                    <a id="scroll-down" type="button" class="btn mx-auto" href="#introduction">
+                    <a id="scroll-down" class="mx-auto" href="#introduction">
                         <svg height="48" viewBox="0 0 10 16" width="80" aria-hidden="true">
                             <path fill-rule="evenodd" d="M5 11L0 6l1.5-1.5L5 8.25 8.5 4.5 10 6l-5 5z"></path>
                         </svg>
