--- a/index.html
+++ b/index.html
@@ -92,10 +92,9 @@
                     <div class="col-md-6 py-5 my-auto header-greetings mx-4">
                         <h1 class="display-3" style="color: #1ed760;">Dr Sa&uacute;l Vargas</h1>
                         <h2 class>Machine Learning Engineer at Spotify</h2>
+                        <h3><a href="mailto:hello@saulvargas.es">hello@saulvargas.es</a></h3>
                         <div class="social-media-top">
                             <ul class="social">
-                                <li><a href="mailto:hello@saulvargas.es"><img src="images/mail.png" alt="E-mail"
-                                            class="img-circle"></a></li>
                                 <li><a href="http://www.twitter.com/saulvargas"><img src="images/twitter.png"
                                             alt="Twitter" class="img-circle"></a></li>
                                 <li><a href="http://es.linkedin.com/in/saulvargas"><img src="images/linkedin.png"
