--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
         }
 
         .header {
-            background: url(images/banner.jpg)no-repeat;
             background-size: cover;
             -webkit-background-size: cover;
             -moz-background-size: cover;
@@ -91,7 +90,7 @@
                 <div class="row" style="height: 90%;">
                     <div class="col-md-6 py-5 my-auto header-greetings mx-4">
                         <h1 class="display-3" style="color: #1ed760;">Dr Sa&uacute;l Vargas</h1>
-                        <h2 class>Machine Learning Engineer at Spotify</h2>
+                        <h2 class>Machine Learning &amp; Data Science</h2>
                         <h3><a href="mailto:hello@saulvargas.es">hello@saulvargas.es</a></h3>
                         <div class="social-media-top">
                             <ul class="social">
@@ -130,8 +129,7 @@
                     across different domains is assisting users finding the content they are interested in. There is
                     where my work comes in. I have developed recommender systems for varied domains such as academic
                     literature in <a href="https://www.mendeley.com/">Mendeley</a> and fashion in <a
-                        href="https://www.asos.com/">ASOS</a>. I now work on <a
-                        href="https://www.spotify.com/uk/">Spotify</a>'s music and podcast search functionality.</p>
+                        href="https://www.asos.com/">ASOS</a>.</p>
                 <p>I received a PhD from the <a href="http://uam.es/">Autonomous University of Madrid (UAM)</a> in Spain
                     under the supervision of <a href="http://ir.ii.uam.es/castells/">Prof Pablo Castells</a>. The
                     research topic was the evaluation and enhancement of novelty and diversity in recommender systems.
