changing green with grey

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         html,
         body {
             font-family: 'Open Sans', sans-serif;
-            background: #1ed760;
+            background: #999;
         }
 
         .header {
@@ -89,7 +89,7 @@
             <div class="col">
                 <div class="row" style="height: 90%;">
                     <div class="col-md-6 py-5 my-auto header-greetings mx-4">
-                        <h1 class="display-3" style="color: #1ed760;">Dr Sa&uacute;l Vargas</h1>
+                        <h1 class="display-3" style="color: #999;">Dr Sa&uacute;l Vargas</h1>
                         <h2 class>Machine Learning &amp; Data Science</h2>
                         <h3><a href="mailto:hello@saulvargas.es">hello@saulvargas.es</a></h3>
                         <div class="social-media-top">
