light blue and centered greeting card

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         html,
         body {
             font-family: 'Open Sans', sans-serif;
-            background: #999;
+            background: #ccf;
         }
 
         .header {
@@ -88,8 +88,9 @@
         <div class="row header">
             <div class="col">
                 <div class="row" style="height: 90%;">
-                    <div class="col-md-6 py-5 my-auto header-greetings mx-4">
-                        <h1 class="display-3" style="color: #999;">Dr Sa&uacute;l Vargas</h1>
+                    <div class="col-md-3"></div>
+                    <div class="col-md-6 py-5 my-auto header-greetings">
+                        <h1 class="display-3" style="color: #fff;">Dr Sa&uacute;l Vargas</h1>
                         <h2 class>Machine Learning &amp; Data Science</h2>
                         <h3><a href="mailto:hello@saulvargas.es">hello@saulvargas.es</a></h3>
                         <div class="social-media-top">
@@ -122,7 +123,7 @@
                 <img class="img-fluid" style="border-radius: 1em;" src="images/profile.jpg" alt="A picture of me">
             </div>
             <div class="col-sm-5">
-                <h2 class="text-center" style="color: white;">¡Hola, Hi, Привет!</h2>
+                <h2 class="text-center">¡Hola, Hi, Привет!</h2>
                 <p>Welcome to my personal website. Let me introduce myself.</p>
                 <p>I am an applied Machine Learning practitioner that enjoys building products and services that
                     millions can use. With the content explosion brought by the World Wide Web, a common challenge
