--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <div class="col">
                 <div class="row" style="height: 90%;">
                     <div class="col-md-3"></div>
-                    <div class="col-md-6 py-5 my-auto header-greetings">
+                    <div class="col-md-6 py-5 my-auto header-greetings mx-2">
                         <h1 class="display-3" style="color: #fff;">Dr Sa&uacute;l Vargas</h1>
                         <h2 class>Machine Learning &amp; Data Science</h2>
                         <h3><a href="mailto:hello@saulvargas.es">hello@saulvargas.es</a></h3>
