update affiliation to infogrid

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         html,
         body {
             font-family: 'Open Sans', sans-serif;
-            background: #2eb875;
+            background: #e0e6f3;
         }
 
         .header {
@@ -130,7 +130,7 @@
                     across different domains is assisting users finding the content they are interested in. There is
                     where my work comes in. I have developed recommender systems for varied domains such as academic
                     literature in <a href="https://www.mendeley.com/">Mendeley</a> and fashion in <a
-                        href="https://www.asos.com/">ASOS</a>. I now work for the ride-hailing company <a href="https://bolt.eu">Bolt</a>.</p>
+                        href="https://www.asos.com/">ASOS</a>. Lately, I have been working on other types of projects for the ride hailing company <a href="https://bolt.eu">Bolt</a>. Currently, I work for the Smart Buildings company <a href="https://www.infogrid.io/">Infogrid</a>.</p>
                 <p>I received a PhD from the <a href="http://uam.es/">Autonomous University of Madrid (UAM)</a> in Spain
                     under the supervision of <a href="http://ir.ii.uam.es/castells/">Prof Pablo Castells</a>. The
                     research topic was the evaluation and enhancement of novelty and diversity in recommender systems.
