--- a/index.html
+++ b/index.html
@@ -125,12 +125,11 @@
             <div class="col-sm-5">
                 <h2 class="text-center">¡Hola, Hi, Привет!</h2>
                 <p>Welcome to my personal website. Let me introduce myself.</p>
-                <p>I am an applied Machine Learning practitioner that enjoys building products and services that
-                    millions can use. With the content explosion brought by the World Wide Web, a common challenge
-                    across different domains is assisting users finding the content they are interested in. There is
-                    where my work comes in. I have developed recommender systems for varied domains such as academic
+                <p>I am an Machine Learning engineer that enjoys building products and services that
+                    millions can use. In the past, I have developed recommender systems for varied domains such as academic
                     literature in <a href="https://www.mendeley.com/">Mendeley</a> and fashion in <a
-                        href="https://www.asos.com/">ASOS</a>. Lately, I have been working on other types of projects for the ride hailing company <a href="https://bolt.eu">Bolt</a>. Currently, I work for the Smart Buildings company <a href="https://www.infogrid.io/">Infogrid</a>.</p>
+                        href="https://www.asos.com/">ASOS</a>. More recently, I have been working on other Machine Learning applications for the ride hailing company <a href="https://bolt.eu">Bolt</a>, such as churn modelling, conversion prediction and OCR.</p>
+                <p>Currently, I am part of the IoT/smart buildings startup <a href="https://www.infogrid.io/">Infogrid</a> where, amongst other things, I am developing a system that provides sensor-based insights to make buildings safer, more comfortable and sustainable.</p>
                 <p>I received a PhD from the <a href="http://uam.es/">Autonomous University of Madrid (UAM)</a> in Spain
                     under the supervision of <a href="http://ir.ii.uam.es/castells/">Prof Pablo Castells</a>. The
                     research topic was the evaluation and enhancement of novelty and diversity in recommender systems.
