cv update, no-ru

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 <img class="img-fluid" style="border-radius: 1em;" src="images/profile.jpg" alt="A picture of me">
             </div>
             <div class="col-sm-5">
-                <h2 class="text-center">¡Hola, Hi, Привет!</h2>
+                <h2 class="text-center">¡Hola, Hi, Tere!</h2>
                 <p>Welcome to my personal website. Let me introduce myself.</p>
                 <p>I am an Machine Learning engineer that enjoys building products and services that
                     millions can use. In the past, I have developed recommender systems for varied domains such as academic
